Finished up main admin screens.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -44,6 +44,8 @@ default.button.delete.label=Delete
 default.button.delete.confirm.message=Are you sure?
 default.button.company.delete.confirm.message=Are you sure?  If you delete a Company, you will also delete all Businesses, Offices, Departments, etc. that belong to it.
 default.button.business.delete.confirm.message=Are you sure?  If you delete a Business, you will also delete all Offices, Departments, etc. that belong to it.
+default.button.office.delete.confirm.message=Are you sure?  If you delete an Office, you will also delete all Departments, Groups, etc. that belong to it.
+default.button.department.delete.confirm.message=Are you sure?  If you delete an Department, you will also delete all Groups that belong to it.
 
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
 typeMismatch.java.net.URL=Property {0} must be a valid URL
