Main screen tree development, final layout for screens, breadcrumb trail, tests for dates and handling campaigns

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -57,3 +57,6 @@ typeMismatch.java.lang.Long=Property {0} must be a valid number
 typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
+
+campaign.dates.reversed=Starting campaign date cannot be after ending campain date
+campaign.dates.overlap=You are trying to create a campaign that overlaps another campaign
