Main work done on Group Overview screen as well as the Activities screens

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -58,5 +58,5 @@ typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 
-campaign.dates.reversed=Starting campaign date cannot be after ending campain date
-campaign.dates.overlap=You are trying to create a campaign that overlaps another campaign
+campaign.dates.reversed=Starting campaign date cannot be the same or after ending campaign date
+campaign.dates.overlap=You are trying to create or edit a campaign that overlaps another campaign
