This is a refactoring change to handle campaigns and donations.  The code is not complete at this point, but wanted to get what I have done committed to be safe.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -60,3 +60,7 @@ typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 
 campaign.dates.reversed=Starting campaign date cannot be the same or after ending campaign date
 campaign.dates.overlap=You are trying to create or edit a campaign that overlaps another campaign
+campaign.not.found=Campaign not found for today's date of {0}
+activity.amount.collected.parse.exception=An exception occurred while parsing Amount Collected
+donation.date.not.in.valid.campaign=The donation date of {0} does not fall within a valid campaign.
+title.homepage=Charity Champ
