Fixing the way the configure screens are handled

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -58,9 +58,19 @@ typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 
+
+# Charity Champ custom messages
+employee.goal.deleted.message=Employee Goal {0} deleted
+meals.dollar.buys.deleted.message=Meals a Dollar Buys {0} deleted
+mofb.shift.value.deleted.message=MOFB Shift {0} deleted
+mofb.shift.created.message=MOFB Shift {0} created
+employee.goal.created.message=Employee Goal {0} created
+meals.dollar.buys.created.message=Meals a Dollar Buys {0} created
 campaign.dates.reversed=Starting campaign date cannot be the same or after ending campaign date
 campaign.dates.overlap=You are trying to create or edit a campaign that overlaps another campaign
 campaign.not.found=Campaign not found for today's date of {0}
-activity.amount.collected.parse.exception=An exception occurred while parsing Amount Collected
-donation.date.not.in.valid.campaign=The donation date of {0} does not fall within a valid campaign.
+activity.amount.collected.parse.exception=Amount collected must be numeric
+global.numeric.value.parse.exception=Value must be numeric
+donation.date.not.in.valid.campaign=The donation date of {0} does not fall within the current campaign.  Go to Manage > Change Campaign to switch campaigns.
+donation.is.moved.to.another.campaign=You've moved the donation from {0} to {1}
 title.homepage=Charity Champ
