Added test cases for employee goal, shift types and meals a dollar buys.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -60,6 +60,8 @@ typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 
 
 # Charity Champ custom messages
+employee.goal.updated.message=Employee Goal {0} updated
+meals.dollar.buys.updated.message=Meals a Dollar Buys {0} updated
 employee.goal.deleted.message=Employee Goal {0} deleted
 meals.dollar.buys.deleted.message=Meals a Dollar Buys {0} deleted
 mofb.shift.value.deleted.message=MOFB Shift {0} deleted
@@ -71,6 +73,9 @@ campaign.dates.overlap=You are trying to create or edit a campaign that overlaps
 campaign.not.found=Campaign not found for today's date of {0}
 activity.amount.collected.parse.exception=Amount collected must be numeric
 global.numeric.value.parse.exception=Value must be numeric
+mofb.shift.value.parse.exception=Value must be numeric. This should be a number that represents the number of meals earned per person working on the shift.
+employee.goal.value.parse.exception=Value must be numeric.  This should be a monetary amount that represents the goal of every employee.
+meals.dollar.buys.value.parse.exception=Value must be numeric.  This should be a valid number and represent how many meals that $1 buys.
 donation.date.not.in.valid.campaign=The donation date of {0} does not fall within the current campaign.  Go to Manage > Change Campaign to switch campaigns.
 donation.is.moved.to.another.campaign=You've moved the donation from {0} to {1}
 title.homepage=Charity Champ
