Finished logic for managing volunteer shifts

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -79,3 +79,4 @@ meals.dollar.buys.value.parse.exception=Value must be numeric.  This should be a
 donation.date.not.in.valid.campaign=The donation date of {0} does not fall within the current campaign.  Go to Manage > Change Campaign to switch campaigns.
 donation.is.moved.to.another.campaign=You've moved the donation from {0} to {1}
 title.homepage=Charity Champ
+volunteer.shift.type.not.found=You must select a valid Shift Type.
