Changes to not allow an update to Campaign cause donations to be orphaned.  Also do not allow delete of Campaign with existing donations on it.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -25,6 +25,7 @@ default.number.format=0
 default.created.message={0} {1} created
 default.updated.message={0} {1} updated
 default.deleted.message={0} {1} deleted
+campaign.not.deleted.message={0} {1} could not be deleted due to existing donations in this campaign
 default.not.deleted.message={0} {1} could not be deleted
 default.not.found.message={0} not found with id {1}
 default.optimistic.locking.failure=Another user has updated this {0} while you were editing
@@ -70,6 +71,7 @@ employee.goal.created.message=Employee Goal {0} created
 meals.dollar.buys.created.message=Meals a Dollar Buys {0} created
 campaign.dates.reversed=Starting campaign date cannot be the same or after ending campaign date
 campaign.dates.overlap=You are trying to create or edit a campaign that overlaps another campaign
+campaign.donations.are.orphaned=You cannot select these dates because one or more donations are being dropped out of the campaign dates
 campaign.not.found=Campaign not found for today's date of {0}
 activity.amount.collected.parse.exception=Amount collected must be numeric
 global.numeric.value.parse.exception=Value must be numeric
