--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -82,3 +82,5 @@ donation.date.not.in.valid.campaign=The donation date of {0} does not fall withi
 donation.is.moved.to.another.campaign=You've moved the donation from {0} to {1}
 title.homepage=Charity Champ
 volunteer.shift.type.not.found=You must select a valid Shift Type.
+global.numeric.effective.date.in.use=You already have an entry with this name for this date.
+global.number.mofb.shift.not.valid=Name is invalid.
