Changes for displaying meals earned on all list screens.  Implemented Stringlist drop down for Activities.  Refactored JeansPayment domain to rename amtPaid to amountCollected to reduce code duplication.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -84,3 +84,4 @@ title.homepage=Charity Champ
 volunteer.shift.type.not.found=You must select a valid Shift Type.
 global.numeric.effective.date.in.use=You already have an entry with this name for this date.
 global.number.mofb.shift.not.valid=Name is invalid.
+activity.name.not.selected=You must select an activity.
